# Supervised-Semantic-Differential

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ssdiff/: __init__.py  _math.py  clusters.py  core.py  crossgroup.py  embeddings.py  io_utils.py  lexicon.py  preprocess.py  snippets.py  sweep.py  utils.py
tests/: conftest.py  test_basic_pipeline.py  test_clusters.py  test_core.py  test_crossgroup.py  test_embeddings.py  test_imports.py  test_io_utils.py  test_kmeans.py  test_lexicon.py  test_numpy_pca.py  test_preprocess.py  test_snippets.py  test_sweep.py  test_utils.py
