[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssdiff"
version = "0.2.2"
description = "Supervised Semantic Differential (SSD): interpretable, embedding-based analysis of concept meaning in text."
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Hubert Plisiecki", email = "hplisiecki@gmail.com" },
  {name = "Paweł Lenartowicz", email = "pawellenartowicz@europe.com" }
]
keywords = ["NLP", "semantics", "word embeddings", "psychometrics", "semantic differential", "computational social science"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

# Runtime dependencies (non-optional)
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.1.4",
  "requests>=2.32.5",
  "matplotlib>=3.8",
  "spacy>=3.7.2",
]

[project.urls]
Homepage = "https://github.com/hplisiecki/Supervised-Semantic-Differential"
Repository = "https://github.com/hplisiecki/Supervised-Semantic-Differential"
Issues = "https://github.com/hplisiecki/Supervised-Semantic-Differential/issues"
Changelog = "https://github.com/hplisiecki/Supervised-Semantic-Differential/releases"

[project.optional-dependencies]
# Install with: pip install "ssdiff[dev,gui]"
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.6",
  "build>=1.0.0",
  "twine>=4.0",
]
gui = [
  "PySide6>=6.6"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
# Your package lives at the repo root under ssdiff/
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ssdiff*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
# Ensure these files exist inside the ssdiff/ directory
ssdiff = ["py.typed", "resources/*"]
